--- a/{{cookiecutter.project_slug}}/.streamlit/config.toml
+++ b/{{cookiecutter.project_slug}}/.streamlit/config.toml
@@ -1,1 +1,8 @@
 # Streamlit Settings
+[server]
+# Disable welcome message
+headless = true
+
+[browser]
+# Disable collecting usage statistics
+gatherUsageStats = false
